# RustApi

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/routes/: echo.rs
tests/: basic_test.rs
