[package]
name = "rocket-api"
version = "0.1.0"
authors = ["Alex Weller <aliweller68@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["helmet"] }
